--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,123 @@
-appdirs==1.4.4
-argon2-cffi @ file:///C:/ci/argon2-cffi_1596828549974/work
-astunparse==1.6.3
-async-generator==1.10
-attrs==20.2.0
-backcall==0.2.0
-beautifulsoup4==4.9.3
-black==20.8b1
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-boilerpipe3==1.3
-brotlipy==0.7.0
-cachetools==4.1.1
-catalogue==1.0.0
-catboost==0.24.1
-certifi==2020.6.20
-cffi @ file:///C:/ci/cffi_1600699250966/work
-charade==1.0.3
-chardet==3.0.4
-click==7.1.2
-cloudpickle==1.6.0
-colorama==0.4.3
-cryptography @ file:///C:/ci/cryptography_1601046913206/work
-cycler==0.10.0
-dask==2.29.0
-decorator==4.4.2
-defusedxml==0.6.0
-distributed==2.29.0
-emoji==0.6.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
-entrypoints==0.3
-featuretools==0.20.0
-fsspec==0.8.3
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-graphviz==0.14.1
-HeapDict==1.0.1
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imbalanced-learn==0.7.0
-importlib-metadata==2.0.0
-ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython==7.18.1
-ipython-genutils==0.2.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.17.0
-JPype1==1.1.2
-jsonschema==3.2.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-core==4.6.3
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-locket==0.2.0
-lxml==4.6.1
-MarkupSafe==1.1.1
-matplotlib==3.3.2
-mistune @ file:///C:/ci/mistune_1594373272338/work
-msgpack==1.0.0
-mypy-extensions==0.4.3
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///C:/ci/nbconvert_1601914921407/work
-nbformat==5.0.7
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
-nltk==3.5
-notebook @ file:///C:/ci/notebook_1601494955742/work
-numpy==1.19.3
-oauthlib==3.1.0
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-packaging==20.4
-pandas==1.1.2
-pandocfilters==1.4.2
-parso==0.7.1
-partd==1.1.0
-pathspec==0.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-plac==1.1.3
-plotly==4.11.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-psutil==5.7.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments==2.7.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
-pyparsing==2.4.7
-pyrsistent==0.17.3
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil==2.8.1
-pytz==2020.1
-pywin32==228
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.2
-regex==2020.9.27
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.6
-scikit-learn==0.23.2
-seaborn==0.11.0
-Send2Trash==1.5.0
-six==1.15.0
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-tblib==1.7.0
-tensorflow-gpu-estimator==2.3.0
-terminado==0.9.1
-testpath==0.4.4
-textblob==0.15.3
-threadpoolctl==2.1.0
-toml==0.10.1
-toolz==0.11.1
-tornado==6.0.4
-tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
-traitlets==5.0.4
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
-vaderSentiment==3.3.2
-wcwidth==0.2.5
-webencodings==0.5.1
-win-inet-pton==1.1.0
-wincertstore==0.2
-wordcloud @ file:///D:/bld/wordcloud_1597448640765/work
-xgboost==1.2.0
-zict==2.0.0
-zipp==3.3.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+appdirs=1.4.4=py_0
+argon2-cffi=20.1.0=py37he774522_1
+async_generator=1.10=py37h28b3542_0
+attrs=20.2.0=py_0
+backcall=0.2.0=py_0
+black=19.10b0=py_0
+bleach=3.2.1=py_0
+boilerpipe3=1.3=pypi_0
+brotlipy=0.7.0=py37he774522_1000
+ca-certificates=2020.10.14=0
+certifi=2020.6.20=pyhd3eb1b0_3
+cffi=1.14.3=py37h7a1dbc1_0
+charade=1.0.3=pypi_0
+chardet=3.0.4=py37_1003
+click=7.1.2=py_0
+colorama=0.4.4=py_0
+console_shortcut=0.1.1=4
+cryptography=3.1.1=py37h7a1dbc1_0
+cycler=0.10.0=py_2
+decorator=4.4.2=py_0
+defusedxml=0.6.0=py_0
+en-core-web-sm=2.3.1=pypi_0
+entrypoints=0.3=py37_0
+freetype=2.10.4=hd328e21_0
+idna=2.10=py_0
+importlib-metadata=2.0.0=py_1
+importlib_metadata=2.0.0=1
+intel-openmp=2020.2=254
+ipykernel=5.3.4=py37h5ca1d4c_0
+ipython=7.18.1=py37h5ca1d4c_0
+ipython_genutils=0.2.0=py37_0
+jedi=0.17.2=py37_0
+jinja2=2.11.2=py_0
+jpeg=9d=he774522_0
+jpype1=1.1.2=pypi_0
+jsonschema=3.2.0=py_2
+jupyter_client=6.1.7=py_0
+jupyter_core=4.6.3=py37_0
+jupyterlab_pygments=0.1.2=py_0
+kiwisolver=1.3.0=py37h1fb7aa8_0
+libblas=3.8.0=20_mkl
+libcblas=3.8.0=20_mkl
+liblapack=3.8.0=20_mkl
+libpng=1.6.37=ha81a0f5_2
+libsodium=1.0.18=h62dcd97_0
+libtiff=4.1.0=h885aae3_6
+lxml=4.6.1=pypi_0
+lz4-c=1.9.2=h62dcd97_2
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+markupsafe=1.1.1=py37hfa6e2cd_1
+matplotlib-base=3.3.2=py37h64d6e1c_1
+mistune=0.8.4=py37hfa6e2cd_1001
+mkl=2020.2=256
+msys2-conda-epoch=20160418=1
+mypy_extensions=0.4.3=py37_0
+nbclient=0.5.1=py_0
+nbconvert=6.0.7=py37_0
+nbformat=5.0.8=py_0
+nest-asyncio=1.4.1=py_0
+notebook=6.1.4=py37_0
+numpy=1.19.3=pypi_0
+olefile=0.46=pyh9f0ad1d_1
+openssl=1.1.1h=he774522_0
+packaging=20.4=py_0
+pandoc=2.11=h9490d1a_0
+pandocfilters=1.4.2=py37_1
+parso=0.7.0=py_0
+pathspec=0.7.0=py_0
+pickleshare=0.7.5=py37_1001
+pillow=8.0.1=py37hb71ed58_0
+pip=20.2.4=py37_0
+plac=1.1.3=pypi_0
+prometheus_client=0.8.0=py_0
+prompt-toolkit=3.0.8=py_0
+pycparser=2.20=py_2
+pygments=2.7.2=pyhd3eb1b0_0
+pyopenssl=19.1.0=py_1
+pyparsing=2.4.7=py_0
+pyrsistent=0.17.3=py37he774522_0
+pysocks=1.7.1=py37_1
+python=3.7.9=h60c2a47_0
+python-dateutil=2.8.1=py_0
+python_abi=3.7=1_cp37m
+pywin32=227=py37he774522_1
+pywinpty=0.5.7=py37_0
+pyzmq=19.0.2=py37ha925a31_1
+regex=2020.10.15=py37he774522_0
+requests=2.24.0=py_0
+send2trash=1.5.0=py37_0
+setuptools=50.3.0=py37h9490d1a_1
+six=1.15.0=py_0
+sqlite=3.33.0=h2a8f88b_0
+terminado=0.9.1=py37_0
+testpath=0.4.4=py_0
+tk=8.6.10=he774522_1
+toml=0.10.1=py_0
+tornado=6.0.4=py37he774522_1
+tqdm=4.50.2=py_0
+traitlets=5.0.5=py_0
+typed-ast=1.4.1=py37he774522_0
+typing_extensions=3.7.4.3=py_0
+urllib3=1.25.11=py_0
+vc=14.1=h0510ff6_4
+vs2015_runtime=14.16.27012=hf0eaf9b_3
+wcwidth=0.2.5=py_0
+webencodings=0.5.1=py37_1
+wheel=0.35.1=py_0
+win_inet_pton=1.1.0=py37_0
+wincertstore=0.2=py37_0
+winpty=0.4.3=4
+wordcloud=1.8.0=py37h4ab8f01_0
+xz=5.2.5=h62dcd97_1
+zeromq=4.3.2=ha925a31_3
+zipp=3.4.0=pyhd3eb1b0_0
+zlib=1.2.11=h62dcd97_4
+zstd=1.4.5=h1f3a1b7_2
