--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,277 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-appdirs=1.4.4=py_0
-argon2-cffi=20.1.0=py37he774522_1
-async_generator=1.10=py37h28b3542_0
-attrs=20.2.0=py_0
-backcall=0.2.0=py_0
-black=19.10b0=py_0
-bleach=3.2.1=py_0
-boilerpipe3=1.3=pypi_0
-brotlipy=0.7.0=py37he774522_1000
-ca-certificates=2020.10.14=0
-certifi=2020.6.20=pyhd3eb1b0_3
-cffi=1.14.3=py37h7a1dbc1_0
-charade=1.0.3=pypi_0
-chardet=3.0.4=py37_1003
-click=7.1.2=py_0
-colorama=0.4.4=py_0
-console_shortcut=0.1.1=4
-cryptography=3.1.1=py37h7a1dbc1_0
-cycler=0.10.0=py_2
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-en-core-web-sm=2.3.1=pypi_0
-entrypoints=0.3=py37_0
-freetype=2.10.4=hd328e21_0
-idna=2.10=py_0
-importlib-metadata=2.0.0=py_1
-importlib_metadata=2.0.0=1
-intel-openmp=2020.2=254
-ipykernel=5.3.4=py37h5ca1d4c_0
-ipython=7.18.1=py37h5ca1d4c_0
-ipython_genutils=0.2.0=py37_0
-jedi=0.17.2=py37_0
-jinja2=2.11.2=py_0
-jpeg=9d=he774522_0
-jpype1=1.1.2=pypi_0
-jsonschema=3.2.0=py_2
-jupyter_client=6.1.7=py_0
-jupyter_core=4.6.3=py37_0
-jupyterlab_pygments=0.1.2=py_0
-kiwisolver=1.3.0=py37h1fb7aa8_0
-libblas=3.8.0=20_mkl
-libcblas=3.8.0=20_mkl
-liblapack=3.8.0=20_mkl
-libpng=1.6.37=ha81a0f5_2
-libsodium=1.0.18=h62dcd97_0
-libtiff=4.1.0=h885aae3_6
-lxml=4.6.1=pypi_0
-lz4-c=1.9.2=h62dcd97_2
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markupsafe=1.1.1=py37hfa6e2cd_1
-matplotlib-base=3.3.2=py37h64d6e1c_1
-mistune=0.8.4=py37hfa6e2cd_1001
-mkl=2020.2=256
-msys2-conda-epoch=20160418=1
-mypy_extensions=0.4.3=py37_0
-nbclient=0.5.1=py_0
-nbconvert=6.0.7=py37_0
-nbformat=5.0.8=py_0
-nest-asyncio=1.4.1=py_0
-notebook=6.1.4=py37_0
-numpy=1.19.3=pypi_0
-olefile=0.46=pyh9f0ad1d_1
-openssl=1.1.1h=he774522_0
-packaging=20.4=py_0
-pandoc=2.11=h9490d1a_0
-pandocfilters=1.4.2=py37_1
-parso=0.7.0=py_0
-pathspec=0.7.0=py_0
-pickleshare=0.7.5=py37_1001
-pillow=8.0.1=py37hb71ed58_0
-pip=20.2.4=py37_0
-plac=1.1.3=pypi_0
-prometheus_client=0.8.0=py_0
-prompt-toolkit=3.0.8=py_0
-pycparser=2.20=py_2
-pygments=2.7.2=pyhd3eb1b0_0
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=py_0
-pyrsistent=0.17.3=py37he774522_0
-pysocks=1.7.1=py37_1
-python=3.7.9=h60c2a47_0
-python-dateutil=2.8.1=py_0
-python_abi=3.7=1_cp37m
-pywin32=227=py37he774522_1
-pywinpty=0.5.7=py37_0
-pyzmq=19.0.2=py37ha925a31_1
-regex=2020.10.15=py37he774522_0
-requests=2.24.0=py_0
-send2trash=1.5.0=py37_0
-setuptools=50.3.0=py37h9490d1a_1
-six=1.15.0=py_0
-sqlite=3.33.0=h2a8f88b_0
-terminado=0.9.1=py37_0
-testpath=0.4.4=py_0
-tk=8.6.10=he774522_1
-toml=0.10.1=py_0
-tornado=6.0.4=py37he774522_1
-tqdm=4.50.2=py_0
-traitlets=5.0.5=py_0
-typed-ast=1.4.1=py37he774522_0
-typing_extensions=3.7.4.3=py_0
-urllib3=1.25.11=py_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_3
-wcwidth=0.2.5=py_0
-webencodings=0.5.1=py37_1
-wheel=0.35.1=py_0
-win_inet_pton=1.1.0=py37_0
-wincertstore=0.2=py37_0
-winpty=0.4.3=4
-wordcloud=1.8.0=py37h4ab8f01_0
-xz=5.2.5=h62dcd97_1
-zeromq=4.3.2=ha925a31_3
-zipp=3.4.0=pyhd3eb1b0_0
-zlib=1.2.11=h62dcd97_4
-zstd=1.4.5=h1f3a1b7_2
+absl-py==0.9.0
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
+appdirs==1.4.4
+argh==0.26.2
+asn1crypto==1.3.0
+astor==0.7.1
+astroid==2.3.3
+astropy==4.0
+astunparse==1.6.3
+atomicwrites==1.3.0
+attrs==20.2.0
+autopep8==1.4.4
+Babel==2.8.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bcrypt==3.1.7
+beautifulsoup4==4.9.3
+bitarray==1.2.1
+bkcharts==0.2
+black==20.8b1
+bleach==3.1.0
+bokeh==1.4.0
+boto==2.49.0
+Bottleneck==1.3.2
+cachetools==4.1.1
+catboost==0.24.1
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.6.0
+clyent==1.2.2
+colorama==0.4.3
+comtypes==1.1.7
+conda==4.8.3
+conda-build==3.18.11
+conda-package-handling==1.6.0
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+cryptography==2.8
+cycler==0.10.0
+Cython==0.29.15
+cytoolz==0.10.1
+dask==2.29.0
+decorator==4.4.2
+defusedxml==0.6.0
+diff-match-patch==20181111
+distributed==2.29.0
+docutils==0.16
+emoji==0.6.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+featuretools==0.20.0
+filelock==3.0.12
+flake8==3.7.9
+Flask==1.1.1
+fsspec==0.8.3
+future==0.18.2
+gast==0.3.3
+gevent==1.4.0
+glob2==0.7
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+graphviz==0.14.1
+greenlet==0.4.15
+grpcio==1.23.0
+gym==0.17.3
+h5py==2.10.0
+HeapDict==1.0.1
+html5lib==1.0.1
+hypothesis==5.5.4
+idna==2.8
+imageio==2.6.1
+imagesize==1.2.0
+imbalanced-learn==0.7.0
+importlib-metadata==2.0.0
+intervaltree==3.0.2
+ipykernel==5.1.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==0.17.0
+json5==0.9.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyterlab==1.2.6
+jupyterlab-server==1.0.6
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==21.1.0
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+libarchive-c==2.8
+llvmlite==0.31.0
+locket==0.2.0
+lxml==4.5.0
+Markdown==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.3.2
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+mock==4.0.1
+more-itertools==8.2.0
+mpmath==1.1.0
+msgpack==1.0.0
+multipledispatch==0.6.0
+mypy-extensions==0.4.3
+navigator-updater==0.2.1
+nbconvert==5.6.1
+nbformat==5.0.7
+networkx==2.4
+nltk==3.5
+nose==1.3.7
+notebook==6.0.3
+numba==0.48.0
+numexpr==2.7.1
+numpy==1.18.1
+numpydoc==0.9.2
+oauthlib==3.1.0
+olefile==0.46
+openpyxl==3.0.3
+packaging==20.1
+pandas==1.1.2
+pandocfilters==1.4.2
+paramiko==2.7.1
+parso==0.7.1
+partd==1.1.0
+path==13.1.0
+pathlib2==2.3.5
+pathspec==0.8.0
+pathtools==0.1.2
+patsy==0.5.1
+pep8==1.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+pkginfo==1.5.0.1
+plotly==4.11.0
+pluggy==0.13.1
+ply==3.11
+prometheus-client==0.7.1
+prompt-toolkit==3.0.7
+protobuf==3.11.4
+psutil==5.7.2
+py==1.8.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.5
+pydocstyle==4.0.1
+pyflakes==2.1.1
+pyglet==1.5.0
+Pygments==2.7.1
+pylint==2.4.4
+PyNaCl==1.3.0
+pyodbc===4.0.0-unsupported
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyreadline==2.1
+pyrsistent==0.17.3
+PySocks==1.7.1
+pytest==5.3.5
+pytest-arraydiff==0.3
+pytest-astropy==0.8.0
+pytest-astropy-header==0.1.2
+pytest-doctestplus==0.5.0
+pytest-openfiles==0.4.0
+pytest-remotedata==0.3.2
+python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.31.7
+pytz==2020.1
+PyWavelets==1.1.1
+pywin32==228
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+QDarkStyle==2.8
+QtAwesome==0.6.1
+qtconsole==4.6.0
+QtPy==1.9.0
+regex==2020.9.27
+requests==2.22.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rope==0.16.0
+rsa==4.6
+Rtree==0.9.3
+ruamel-yaml==0.15.87
+scikit-image==0.16.2
+scikit-learn==0.23.2
+scipy==1.4.1
+seaborn==0.11.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.15.0
+snowballstemmer==2.0.0
+sortedcollections==1.1.2
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+Sphinx==2.4.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.2.0
+spyder==4.0.1
+spyder-kernels==1.8.1
+SQLAlchemy==1.3.13
+statsmodels==0.11.0
+sympy==1.5.1
+tables==3.6.1
+tblib==1.7.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+tensorflow-gpu-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+textblob==0.15.3
+threadpoolctl==2.1.0
+toml==0.10.1
+toolz==0.11.1
+tornado==6.0.4
+tqdm==4.42.1
+traitlets==5.0.4
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+ujson==1.35
+unicodecsv==0.14.1
+urllib3==1.25.8
+vaderSentiment==3.3.2
+watchdog==0.10.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.0
+widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.11.2
+xgboost==1.2.0
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwings==0.17.1
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf==0.28.0
+zict==2.0.0
+zipp==3.3.0
