--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 absl-py==0.9.0
 alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
 appdirs==1.4.4
 argh==0.26.2
 asn1crypto==1.3.0
@@ -79,6 +82,24 @@ imagesize==1.2.0
 imbalanced-learn==0.7.0
 importlib-metadata==2.0.0
 intervaltree==3.0.2
+ipykernel==5.1.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==0.17.0
+json5==0.9.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyterlab==1.2.6
+jupyterlab-server==1.0.6
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 keyring==21.1.0
