--- a/requirements.txt
+++ b/requirements.txt
@@ -1,247 +1,111 @@
-absl-py==0.9.0
-alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-navigator==1.9.12
-anaconda-project==0.8.3
 appdirs==1.4.4
-argh==0.26.2
-asn1crypto==1.3.0
-astor==0.7.1
-astroid==2.3.3
-astropy==4.0
+argon2-cffi @ file:///C:/ci/argon2-cffi_1596828549974/work
 astunparse==1.6.3
-atomicwrites==1.3.0
+async-generator==1.10
 attrs==20.2.0
-autopep8==1.4.4
-Babel==2.8.0
 backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.1.7
 beautifulsoup4==4.9.3
-bitarray==1.2.1
-bkcharts==0.2
 black==20.8b1
-bleach==3.1.0
-bokeh==1.4.0
-boto==2.49.0
-Bottleneck==1.3.2
+bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+boilerpipe3==1.3
+brotlipy==0.7.0
 cachetools==4.1.1
+catalogue==1.0.0
 catboost==0.24.1
 certifi==2020.6.20
-cffi==1.14.0
+cffi @ file:///C:/ci/cffi_1600699250966/work
+charade==1.0.3
 chardet==3.0.4
 click==7.1.2
 cloudpickle==1.6.0
-clyent==1.2.2
 colorama==0.4.3
-comtypes==1.1.7
-conda==4.8.3
-conda-build==3.18.11
-conda-package-handling==1.6.0
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-cryptography==2.8
+cryptography @ file:///C:/ci/cryptography_1601046913206/work
 cycler==0.10.0
-Cython==0.29.15
-cytoolz==0.10.1
 dask==2.29.0
 decorator==4.4.2
 defusedxml==0.6.0
-diff-match-patch==20181111
 distributed==2.29.0
-docutils==0.16
 emoji==0.6.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
 featuretools==0.20.0
-filelock==3.0.12
-flake8==3.7.9
-Flask==1.1.1
 fsspec==0.8.3
-future==0.18.2
-gast==0.3.3
-gevent==1.4.0
-glob2==0.7
 google-auth==1.22.1
 google-auth-oauthlib==0.4.1
 graphviz==0.14.1
-greenlet==0.4.15
-grpcio==1.23.0
-gym==0.17.3
-h5py==2.10.0
 HeapDict==1.0.1
-html5lib==1.0.1
-hypothesis==5.5.4
-idna==2.8
-imageio==2.6.1
-imagesize==1.2.0
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 imbalanced-learn==0.7.0
 importlib-metadata==2.0.0
-intervaltree==3.0.2
-ipykernel==5.1.4
+ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
 ipython==7.18.1
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
 jedi==0.17.2
 Jinja2==2.11.2
 joblib==0.17.0
-json5==0.9.1
+JPype1==1.1.2
 jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
 jupyter-core==4.6.3
-jupyterlab==1.2.6
-jupyterlab-server==1.0.6
-Keras-Applications==1.0.8
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
 Keras-Preprocessing==1.1.2
-keyring==21.1.0
 kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.8
-llvmlite==0.31.0
 locket==0.2.0
-lxml==4.5.0
-Markdown==3.2.1
+lxml==4.6.1
 MarkupSafe==1.1.1
 matplotlib==3.3.2
-mccabe==0.6.1
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-mock==4.0.1
-more-itertools==8.2.0
-mpmath==1.1.0
+mistune @ file:///C:/ci/mistune_1594373272338/work
 msgpack==1.0.0
-multipledispatch==0.6.0
 mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nbconvert==5.6.1
+nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
+nbconvert @ file:///C:/ci/nbconvert_1601914921407/work
 nbformat==5.0.7
-networkx==2.4
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
 nltk==3.5
-nose==1.3.7
-notebook==6.0.3
-numba==0.48.0
-numexpr==2.7.1
-numpy==1.18.1
-numpydoc==0.9.2
+notebook @ file:///C:/ci/notebook_1601494955742/work
+numpy==1.19.3
 oauthlib==3.1.0
-olefile==0.46
-openpyxl==3.0.3
-packaging==20.1
+olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+packaging==20.4
 pandas==1.1.2
 pandocfilters==1.4.2
-paramiko==2.7.1
 parso==0.7.1
 partd==1.1.0
-path==13.1.0
-pathlib2==2.3.5
 pathspec==0.8.0
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
-pkginfo==1.5.0.1
+plac==1.1.3
 plotly==4.11.0
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.7.1
+prometheus-client==0.8.0
 prompt-toolkit==3.0.7
-protobuf==3.11.4
 psutil==5.7.2
-py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycrypto==2.6.1
-pycurl==7.43.0.5
-pydocstyle==4.0.1
-pyflakes==2.1.1
-pyglet==1.5.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 Pygments==2.7.1
-pylint==2.4.4
-PyNaCl==1.3.0
-pyodbc===4.0.0-unsupported
-pyOpenSSL==19.1.0
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.7
-pyreadline==2.1
 pyrsistent==0.17.3
-PySocks==1.7.1
-pytest==5.3.5
-pytest-arraydiff==0.3
-pytest-astropy==0.8.0
-pytest-astropy-header==0.1.2
-pytest-doctestplus==0.5.0
-pytest-openfiles==0.4.0
-pytest-remotedata==0.3.2
+PySocks @ file:///C:/ci/pysocks_1594394709107/work
 python-dateutil==2.8.1
-python-jsonrpc-server==0.3.4
-python-language-server==0.31.7
 pytz==2020.1
-PyWavelets==1.1.1
 pywin32==228
-pywin32-ctypes==0.2.0
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.2
-QDarkStyle==2.8
-QtAwesome==0.6.1
-qtconsole==4.6.0
-QtPy==1.9.0
 regex==2020.9.27
-requests==2.22.0
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 requests-oauthlib==1.3.0
 retrying==1.3.3
-rope==0.16.0
 rsa==4.6
-Rtree==0.9.3
-ruamel-yaml==0.15.87
-scikit-image==0.16.2
 scikit-learn==0.23.2
-scipy==1.4.1
 seaborn==0.11.0
 Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.15.0
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
 sortedcontainers==2.2.2
 soupsieve==2.0.1
-Sphinx==2.4.0
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.2.0
-spyder==4.0.1
-spyder-kernels==1.8.1
-SQLAlchemy==1.3.13
-statsmodels==0.11.0
-sympy==1.5.1
-tables==3.6.1
 tblib==1.7.0
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
 tensorflow-gpu-estimator==2.3.0
-termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 textblob==0.15.3
@@ -249,29 +113,17 @@ threadpoolctl==2.1.0
 toml==0.10.1
 toolz==0.11.1
 tornado==6.0.4
-tqdm==4.42.1
+tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
 traitlets==5.0.4
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
-ujson==1.35
-unicodecsv==0.14.1
-urllib3==1.25.8
+urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
 vaderSentiment==3.3.2
-watchdog==0.10.2
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.0
-widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
-win-unicode-console==0.5
 wincertstore==0.2
-wrapt==1.11.2
+wordcloud @ file:///D:/bld/wordcloud_1597448640765/work
 xgboost==1.2.0
-xlrd==1.2.0
-XlsxWriter==1.2.7
-xlwings==0.17.1
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf==0.28.0
 zict==2.0.0
 zipp==3.3.0
